@@ -1,10 +1,12 @@
-# $NetBSD: DEINSTALL,v 1.3 2003/08/30 11:08:22 jlam Exp $
+# $NetBSD: DEINSTALL,v 1.4 2003/09/10 17:31:43 gavan Exp $
 
 FONT_PROGS="@FONT_PROGS@"
 X11BASE=@X11BASE@
 
 X11_HOSTDEF=${X11BASE}/lib/X11/config/host.def
 HOSTDEF=${PKG_PREFIX}/lib/X11/config/host.def
+SITEDEF=${PKG_PREFIX}/lib/X11/config/site.def
+SV4LIB=${PKG_PREFIX}/lib/X11/config/sv4Lib.tmpl
 
 case ${STAGE} in
 POST-DEINSTALL)
@@ -23,6 +25,9 @@ POST-DEINSTALL)
 	   ${CMP} -s ${X11_HOSTDEF} ${HOSTDEF}; then
 		${RM} -f ${HOSTDEF}
 	fi
+	case ${X11BASE} in
+		*openwin) ${RM} -f ${SITEDEF} ${SV4LIB} ;;
+	esac
 	${ECHO} "done."
 	${RMDIR} -p ${PKG_PREFIX}/lib/X11/config 2>/dev/null || ${TRUE}
 	;;
