@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3314 2003/09/10 16:49:14 taca Exp $
+$NetBSD: CHANGES,v 1.3315 2003/09/10 17:31:40 gavan Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3613,3 +3613,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated ruby-DBI to 0.0.21 [taca 2003-09-10]
 	Updated ruby-DBD-postgresql to 0.0.21 [taca 2003-09-10]
 	Added ruby-DBD-mysql-0.0.21 [taca 2003-09-10]
+	Updated xpkgwedge to 1.8 [gavan 2003-09-10]
